Seguimos con practicas

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,10 +8,11 @@
     <title>Websockets</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid d-flex justify-content-center align-items-center">
         <h2>Pagina Websockets</h2>
     </div>
-
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
